Refactored the whole thing to work with Lollipop's AppComapt v21 and to use navigation drawer instead of tabs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/MyTheme">
+        android:theme="@style/MaterialTheme">
         <activity
             android:name="org.nirbo.smsmanipulator.MainActivity"
             android:label="@string/app_name"
